# rust-js-sandbox

./: .gitignore  Cargo.toml  Makefile  mithril.js  mithril.js.mem  mithril.ll
src/: lib.rs  main.rs
src/mithril/: core.rs  mod.rs  render.rs
static/: index.html  mithril.js  mithril.js.mem  mithril.ll
