[package]
name = "mithril"
version = "0.0.1"
authors = ["Yosuke ONOUE <onoue@likr-lab.com>"]

[dependencies]
libc = "0.1.3"
rustc-serialize = "0.3.1"

[dependencies.rust-mustache]
path = "rust-mustache"

[dependencies.webplatform]
version = "0.3.0"

[dependencies.webplatform-url]
path = "./rust-url"
